force-app/main/default/objects/Contact_Edition_Mapping__c/Contact_Edition_Mapping__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - It will contain the account contact mapping along with edition</description>
    <label>Contact Edition Mapping</label>
    <nameField>
        <displayFormat>CEM-{0000000}</displayFormat>
        <label>Contact Edition Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Edition Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>