force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <description>Defines the user type like Exhibitor, Agent, Co-Exhibitor, Contractor, Online</description>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Type1</valueSetName>
    </valueSet>
</CustomField>