force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Look up to Account record</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Edition Mappings (Account)</relationshipLabel>
    <relationshipName>Contact_Event_Edition_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>