force-app/main/default/objects/Contact_Edition_Mapping__c/fields/CC_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Status__c</fullName>
    <description>Formula field, fetches value from Edition Customer Center status</description>
    <formula>TEXT(Edition__r.Customer_Center_Status__c)</formula>
    <label>CC Status</label>
    <type>Text</type>
</CustomField>