force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Completed_Purchase_Summaries__c.field-meta.xml
<CustomField>
    <fullName>Completed_Purchase_Summaries__c</fullName>
    <description>Purchase Summaries Completed by Customer</description>
    <inlineHelpText>Purchase Summaries Completed by Customer</inlineHelpText>
    <label>Completed Purchase Summaries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Purchase_Summary_Type</valueSetName>
    </valueSet>
</CustomField>