force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Look up to Contact record</description>
    <label>Contact</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Not a Customer Center Contact.</errorMessage>
        <filterItems>
            <field>Contact.IOM_Contact_Identifier__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Edition Mappings</relationshipLabel>
    <relationshipName>Contact_Event_Edition_Mappings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>