force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>contact Email</description>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>