force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Look up to Edition record</description>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Contact  Edition Mappings</relationshipLabel>
    <relationshipName>Contact_Event_Edition_Mappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>