force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <description>To store the value of date time when welcome email is sent</description>
    <label>Welcome Email Date</label>
    <type>DateTime</type>
</CustomField>