force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>This field is used to capture the error message if any while sending welcome email</description>
    <inlineHelpText>This will capture details of error during email send functionality.</inlineHelpText>
    <label>Welcome Email Error</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>