force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Feathr_Unique_Link__c.field-meta.xml
<CustomField>
    <fullName>Feathr_Unique_Link__c</fullName>
    <description>Feathr Unique Link</description>
    <label>Feathr Unique Link</label>
    <type>Url</type>
</CustomField>