force-app/main/default/objects/Contact_Edition_Mapping__c/fields/First_Login_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Login_Date_Time__c</fullName>
    <description>To capture first login date time to a particular edition.</description>
    <label>First Login Date Time</label>
    <type>DateTime</type>
</CustomField>