force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Grand_Parent_Contact_Edition_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Grand_Parent_Contact_Edition_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used in case of Co-Exhibitor/Reseller</description>
    <label>Grand Parent Contact Edition Mapping</label>
    <referenceTo>Contact_Edition_Mapping__c</referenceTo>
    <relationshipLabel>Contact Edition Mappings (Grand Parent Contact Edition Mapping)</relationshipLabel>
    <relationshipName>Contact_Edition_Mappings1</relationshipName>
    <type>Lookup</type>
</CustomField>