force-app/main/default/objects/Contact_Edition_Mapping__c/fields/IsEmailSent__c.field-meta.xml
<CustomField>
    <fullName>IsEmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When welcome email is sent to user then this field will set to true.</description>
    <label>Is Email Sent</label>
    <type>Checkbox</type>
</CustomField>