force-app/main/default/objects/Contact_Edition_Mapping__c/fields/isSecondary__c.field-meta.xml
<CustomField>
    <fullName>isSecondary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if the contact is assigned to work on selected Edition.</description>
    <label>IS Secondary</label>
    <type>Checkbox</type>
</CustomField>