force-app/main/default/objects/Contact_Edition_Mapping__c/fields/isTestUser__c.field-meta.xml
<CustomField>
    <fullName>isTestUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTestUser</label>
    <type>Checkbox</type>
</CustomField>