force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Agent Account if applies</description>
    <inlineHelpText>Parent Account in case of Agent-Exh and Exh-Co-exib</inlineHelpText>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Edition Mappings (Parent Account)</relationshipLabel>
    <relationshipName>Contact_Event_Edition_Mappings1</relationshipName>
    <type>Lookup</type>
</CustomField>