force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Parent_Contact_Edition_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contact_Edition_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used in case of Co-exhibitor/ Reseller</description>
    <label>Parent Contact Edition Mapping</label>
    <referenceTo>Contact_Edition_Mapping__c</referenceTo>
    <relationshipLabel>Contact Edition Mappings</relationshipLabel>
    <relationshipName>Contact_Edition_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>