force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Type__c</fullName>
    <label>Parent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Type</valueSetName>
    </valueSet>
</CustomField>