force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Popup_Marked_as_Read__c.field-meta.xml
<CustomField>
    <fullName>Popup_Marked_as_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to track if greeting pop up message is read by customer</description>
    <label>Popup Marked as Read</label>
    <type>Checkbox</type>
</CustomField>