force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Primary_Contact_Edition_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Edition_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact Edition Mapping</label>
    <referenceTo>Contact_Edition_Mapping__c</referenceTo>
    <relationshipLabel>Contact Edition Mappings (Sharer Contact Edition Mapping)</relationshipLabel>
    <relationshipName>Sharer_Contact_Edition_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>