force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Status__c</fullName>
    <description>Defines status of account contact relationship</description>
    <label>Relationship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>