force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Replace_User_Primary_CEM__c.field-meta.xml
<CustomField>
    <fullName>Replace_User_Primary_CEM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replace User Primary CEM</label>
    <referenceTo>Contact_Edition_Mapping__c</referenceTo>
    <relationshipLabel>Contact Edition Mappings (Replace_User_Primary_CEM)</relationshipLabel>
    <relationshipName>Contact_Edition_Mappings2</relationshipName>
    <type>Lookup</type>
</CustomField>