force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role of user in selected edition for selected account.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Center_Roles</valueSetName>
    </valueSet>
</CustomField>