force-app/main/default/objects/Contact_Edition_Mapping__c/fields/Welcome_Email_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Job_Id__c</fullName>
    <label>Welcome Email Job Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>