force-app/main/default/objects/Contact_Edition_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Edition__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Access_Type__c</columns>
    <columns>Relationship_Status__c</columns>
    <columns>CC_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>